--- a/assets/style.css
+++ b/assets/style.css
@@ -2,9 +2,18 @@ body {
 	max-width: 1920px;
 	margin: auto;
 }
+main {
+	width: 100%;
+}
 * {
 	font-family: 'Inter';
 	font-style: normal;
+}
+h2,h3{
+	font-size: 1.8em;
+}
+h4 {
+	font-size: 1.5em;
 }
 header {
 	background-color: white;
@@ -38,11 +47,9 @@ nav a {
 	color: #000;
 	cursor: pointer;
 }
-
 .social-link img {
 	width: 20px;
 }
-
 #about {
 	display: flex;
 	background-color: #F6D2B8;
@@ -50,7 +57,6 @@ nav a {
 	padding-block: 100px;
 	position: relative;
 }
-
 .picture.left::before {
 	content: ' ';
 	background-color: #E5975F;
@@ -61,13 +67,11 @@ nav a {
 	left: 0;
 	z-index: -1;
 }
-
 .picture {
 	flex: 1;
 	margin: 0 20px;
 	z-index: 0;
 }
-
 .picture img {
 	width: 100%;
 
@@ -81,10 +85,12 @@ nav a {
 	font-size: 30px;
 }
 .about-me__introduction {
+	display: inline-block;
 	font-family: 'Spectral';
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
+	font-size: 1em;
 }
 #about-me p {
 	width: 80%;
@@ -133,18 +139,19 @@ nav a {
 	display: flex;
 	font-size: 24px;
 }
-.quote {
+blockquote {
 	width: 70%;
 	margin: auto;
 	padding-block: 3em;
 }
-.quote__text {
+blockquote p {
 	font-family: 'Spectral';
 	font-style: italic;
 	font-weight: 300;
+	font-size: 2em;
 
 }
-.quote__author {
+cite {
 	font-family: 'Spectral';
 	font-weight: 800;
 	font-size: 22px;
@@ -206,33 +213,42 @@ nav a {
 	right: 0;
 	z-index: -1;
 }
-.form-container {
+form, fieldset {
 	flex : 2;
-
-}
-form {
 	display: flex;
 	flex-direction: column;
-	width: 70%;
+	width: 80%;
 	align-items: flex-start;
 }
-
+legend {
+	display: block;
+	width: 100%;
+	padding: 0;
+}
+fieldset {
+	border: none;
+}
+label {
+	display: inline-block;
+}
 form input {
 	width: 100%;
 	background-color: transparent;
 	border: solid 1px;
 	height: 2.5em;
 	margin-bottom: 20px;
+	display: block;
 }
 
 form textarea {
-	width: 100%;
+	width: 100% ;
 	background-color: transparent;
 	border: solid 1px;
 	height: 5em;
 	line-height: 2.5em;
 	font-size: 1.2em;
 	margin-bottom: 20px;
+	display: block;
 }
 input[type="submit"] {
 	background-color: #BEB45A;
@@ -243,7 +259,7 @@ input[type="submit"] {
 	.picture {
 		flex : 2;
 	}
-	#about, #contact .container {
+	#about, #contact .container, form {
 		align-items: center;
 	}
 	.about-me__title {
@@ -251,6 +267,9 @@ input[type="submit"] {
 		margin-bottom: 1em;
 	}
 	#about-me h6, #about-me p {
+		width: 100%;
+	}
+	form{
 		width: 100%;
 	}
 }
@@ -285,10 +304,9 @@ input[type="submit"] {
 		height: auto;
 		margin: 2em 0
 	}
-	.service__description{
+	.service p{
 		margin-bottom: 1em;
 	}
-
 	#services .container::before{
 		width: 30%;
 		height: 100%;
@@ -297,7 +315,6 @@ input[type="submit"] {
 		left: auto;
 		z-index: 0;
 	}
-
 	#contact .container {
 		flex-direction: column;
 	}
@@ -315,15 +332,15 @@ input[type="submit"] {
 }
 
 @media all and (max-width: 650px) {
-	.top-header {
+	header {
 		flex-direction: column;
 		padding-inline: 0;
 	}
-	.top-header .nav, .top-header .nav ul {
+	header nav, header nav ul {
 		width: 100%;
 		padding: 0 0 0 0;
 	}
-	.top-header .nav li {
+	header nav li {
 		flex: 1;
 		padding-block: 1em;
 		text-align: center;
@@ -341,7 +358,7 @@ input[type="submit"] {
 		padding-inline: 2em;
 		padding-block: 2em;
 	}
-	form {
+	form input, form textarea, form .container, form, fieldset, legend{
 		width: 100%;
 	}
 	.picture {
