--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,9 @@ main {
 	font-family: 'Inter';
 	font-style: normal;
 }
+strong{
+	font-weight: inherit;
+}
 h2,h3{
 	font-size: 1.8em;
 }
@@ -25,6 +28,14 @@ header {
 	padding-inline: 100px;
 	padding-block: 30px;
 	align-items: center;
+}
+footer{
+	background-color: #D8D3A8;
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	padding: 20px 0px 10px 0px;
+	font-size: 0.9em;
 }
 
 header .name {
