--- a/assets/style.css
+++ b/assets/style.css
@@ -258,7 +258,9 @@ form input {
 	margin-bottom: 20px;
 	display: block;
 }
-
+form h4 {
+	font-size: 1em;
+}
 form textarea {
 	width: 70% ;
 	background-color: transparent;
